fix: fixed layout on mobile devices

--- a/styles/adaptive.css
+++ b/styles/adaptive.css
@@ -1,10 +1,39 @@
 @media screen and (max-width: 576px) {
   .section {
-    padding: 1rem 2rem;
+    padding: 1.5rem 0;
   }
 
   pre {
     display: none;
+  }
+
+  .footer {
+    padding: 1rem 0;
+  }
+
+  .schedule__form {
+    align-items: center;
+  }
+
+  .schedule__form label {
+    width: 100%;
+  }
+
+  .schedule__select {
+    margin: 1rem auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bio__img {
+    margin-left: 1rem;
+  }
+
+  .schedule__input,
+  .schedule__item {
+    width: 100%;
+    margin: 0;
   }
 }
 
